# pdfium-builder

./: .env  .gitignore  .gitmodules  .ios.env  .mac.arm64.env  .mac.env  .mac.x64.env  .prettierignore  .release.env  .taplo.toml  .wasm.env  Cargo.toml  README.md  justfile  package.json  tsconfig.json
.changeset/: config.json
.github/actions/: build-pdfium.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-pdfium/: action.yml
.github/workflows/: build-action.yml  build.yml  release.yml
args/: android.gn  common.gn  linux.gn  mac.gn  release.gn
crates/pdf-viewer/: Cargo.toml  README.md
crates/pdf-viewer/src/: document.rs  lib.rs  viewer.rs
examples/: README.md
examples/sample/: index.ts  package.json  pdfium.js  pdfium.wasm  tsconfig.json
examples/sample-pdf-viewer/: index.html  index.ts  package.json  tsconfig.json
examples/sample-wasm-bindgen/: Cargo.toml  index.html  index.ts  package.json
examples/sample-wasm-bindgen/src/: lib.rs
patches/: headers.patch  ios.build.patch  ios.file.patch  shared.patch  wasm.build.patch  wasm.patch  win.toolchain.patch
