[package]
edition = "2021"
name    = "pdf-viewer"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

js-sys       = { workspace = true }
wasm-bindgen = { workspace = true }

pdfium-render = { git = "https://github.com/fundon/pdfium-render", branch = "turn-off-automatic-document-closing", default-features = false, features = [
    "pdfium_latest",
    "sync",
    "thread_safe",
] }
